{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 568,
  "lineage": "22349216-f2ab-4e28-c2a4-8d42a2d80bd8",
  "resources": [
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:267074127319:security-group/sg-02de75152c0d68425",
            "description": "EKS cluster security group.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow cluster egress access to the Internet.",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02de75152c0d68425",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow pods to communicate with the EKS cluster API.",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-068245070d311fc1e"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "skyworkz-k8s-training-m0Mr1GVr20231102094949358800000003",
            "name_prefix": "skyworkz-k8s-training-m0Mr1GVr",
            "owner_id": "267074127319",
            "revoke_rules_on_delete": false,
            "tags": {
              "GithubOrg": "skyworkz",
              "GithubRepo": "kubernetes-training-setup-aws",
              "Name": "skyworkz-k8s-training-m0Mr1GVr-eks_cluster_sg"
            },
            "tags_all": {
              "GithubOrg": "skyworkz",
              "GithubRepo": "kubernetes-training-setup-aws",
              "Name": "skyworkz-k8s-training-m0Mr1GVr-eks_cluster_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c097766d8319d729"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "workers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:267074127319:security-group/sg-068245070d311fc1e",
            "description": "Security group for all nodes in the cluster.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow nodes all egress to the Internet.",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-068245070d311fc1e",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow node to communicate with each other.",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "Allow pods running extension API servers on port 443 to receive communication from cluster control plane.",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-02de75152c0d68425"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Allow workers pods to receive communication from the cluster control plane.",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-02de75152c0d68425"
                ],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "skyworkz-k8s-training-m0Mr1GVr20231102094949749600000005",
            "name_prefix": "skyworkz-k8s-training-m0Mr1GVr",
            "owner_id": "267074127319",
            "revoke_rules_on_delete": false,
            "tags": {
              "GithubOrg": "skyworkz",
              "GithubRepo": "kubernetes-training-setup-aws",
              "Name": "skyworkz-k8s-training-m0Mr1GVr-eks_worker_sg",
              "kubernetes.io/cluster/skyworkz-k8s-training-m0Mr1GVr": "owned"
            },
            "tags_all": {
              "GithubOrg": "skyworkz",
              "GithubRepo": "kubernetes-training-setup-aws",
              "Name": "skyworkz-k8s-training-m0Mr1GVr-eks_worker_sg",
              "kubernetes.io/cluster/skyworkz-k8s-training-m0Mr1GVr": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c097766d8319d729"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_egress_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow cluster egress access to the Internet.",
            "from_port": 0,
            "id": "sgrule-172605269",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-02de75152c0d68425",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_https_worker_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow pods to communicate with the EKS cluster API.",
            "from_port": 443,
            "id": "sgrule-3713005260",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-02de75152c0d68425",
            "self": false,
            "source_security_group_id": "sg-068245070d311fc1e",
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.workers",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_egress_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow nodes all egress to the Internet.",
            "from_port": 0,
            "id": "sgrule-2907544600",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-068245070d311fc1e",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.workers",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow workers pods to receive communication from the cluster control plane.",
            "from_port": 1025,
            "id": "sgrule-3607732533",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-068245070d311fc1e",
            "self": false,
            "source_security_group_id": "sg-02de75152c0d68425",
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.workers",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow pods running extension API servers on port 443 to receive communication from cluster control plane.",
            "from_port": 443,
            "id": "sgrule-3916338521",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-068245070d311fc1e",
            "self": false,
            "source_security_group_id": "sg-02de75152c0d68425",
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.workers",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow node to communicate with each other.",
            "from_port": 0,
            "id": "sgrule-3397547580",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-068245070d311fc1e",
            "self": false,
            "source_security_group_id": "sg-068245070d311fc1e",
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.workers",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-017b8f0c8995d3987",
            "association_id": "eipassoc-0e2e836dce111a41b",
            "domain": "vpc",
            "id": "eipalloc-017b8f0c8995d3987",
            "network_border_group": "eu-west-1",
            "network_interface": "eni-01d28d0d827080917",
            "private_dns": "ip-10-0-1-105.eu-west-1.compute.internal",
            "private_ip": "10.0.1.105",
            "public_dns": "ec2-54-246-164-253.eu-west-1.compute.amazonaws.com",
            "public_ip": "54.246.164.253",
            "public_ipv4_pool": "amazon",
            "tags": {
              "GithubOrg": "skyworkz",
              "GithubRepo": "kubernetes-training-setup-aws",
              "Name": "skyworkz-k8s-training-m0Mr1GVr-eu-west-1a"
            },
            "tags_all": {
              "GithubOrg": "skyworkz",
              "GithubRepo": "kubernetes-training-setup-aws",
              "Name": "skyworkz-k8s-training-m0Mr1GVr-eu-west-1a"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:267074127319:internet-gateway/igw-08f3e0fdddbc2b6f7",
            "id": "igw-08f3e0fdddbc2b6f7",
            "owner_id": "267074127319",
            "tags": {
              "GithubOrg": "skyworkz",
              "GithubRepo": "kubernetes-training-setup-aws",
              "Name": "skyworkz-k8s-training-m0Mr1GVr"
            },
            "tags_all": {
              "GithubOrg": "skyworkz",
              "GithubRepo": "kubernetes-training-setup-aws",
              "Name": "skyworkz-k8s-training-m0Mr1GVr"
            },
            "vpc_id": "vpc-0c097766d8319d729"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-017b8f0c8995d3987",
            "connectivity_type": "public",
            "id": "nat-0ff256912244d7398",
            "network_interface_id": "eni-01d28d0d827080917",
            "private_ip": "10.0.1.105",
            "public_ip": "54.246.164.253",
            "subnet_id": "subnet-0bde173fcb2ebc2a3",
            "tags": {
              "GithubOrg": "skyworkz",
              "GithubRepo": "kubernetes-training-setup-aws",
              "Name": "skyworkz-k8s-training-m0Mr1GVr-eu-west-1a"
            },
            "tags_all": {
              "GithubOrg": "skyworkz",
              "GithubRepo": "kubernetes-training-setup-aws",
              "Name": "skyworkz-k8s-training-m0Mr1GVr-eu-west-1a"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0a4e2f452107bd6131080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0ff256912244d7398",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0a4e2f452107bd613",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-08f3e0fdddbc2b6f7",
            "id": "r-rtb-09521e228b84daaf71080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-09521e228b84daaf7",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:267074127319:route-table/rtb-0a4e2f452107bd613",
            "id": "rtb-0a4e2f452107bd613",
            "owner_id": "267074127319",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0ff256912244d7398",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "GithubOrg": "skyworkz",
              "GithubRepo": "kubernetes-training-setup-aws",
              "Name": "skyworkz-k8s-training-m0Mr1GVr-private"
            },
            "tags_all": {
              "GithubOrg": "skyworkz",
              "GithubRepo": "kubernetes-training-setup-aws",
              "Name": "skyworkz-k8s-training-m0Mr1GVr-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c097766d8319d729"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:267074127319:route-table/rtb-09521e228b84daaf7",
            "id": "rtb-09521e228b84daaf7",
            "owner_id": "267074127319",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08f3e0fdddbc2b6f7",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "GithubOrg": "skyworkz",
              "GithubRepo": "kubernetes-training-setup-aws",
              "Name": "skyworkz-k8s-training-m0Mr1GVr-public"
            },
            "tags_all": {
              "GithubOrg": "skyworkz",
              "GithubRepo": "kubernetes-training-setup-aws",
              "Name": "skyworkz-k8s-training-m0Mr1GVr-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c097766d8319d729"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05c02b798f50f6aa0",
            "route_table_id": "rtb-0a4e2f452107bd613",
            "subnet_id": "subnet-0fd5442d76d544041"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0009c8c693b61a718",
            "route_table_id": "rtb-0a4e2f452107bd613",
            "subnet_id": "subnet-057ef46bbd5a90434"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d4402132673326ad",
            "route_table_id": "rtb-0a4e2f452107bd613",
            "subnet_id": "subnet-013ad20823b3a8e2d"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0311e91f4028c5302",
            "route_table_id": "rtb-09521e228b84daaf7",
            "subnet_id": "subnet-0bde173fcb2ebc2a3"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-011deb602cb92c179",
            "route_table_id": "rtb-09521e228b84daaf7",
            "subnet_id": "subnet-0c26f36f3ec111ebe"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f91dd2dc7a6a8767",
            "route_table_id": "rtb-09521e228b84daaf7",
            "subnet_id": "subnet-0f8b8c85f53bc0798"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:267074127319:subnet/subnet-0fd5442d76d544041",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fd5442d76d544041",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "267074127319",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "GithubOrg": "skyworkz",
              "GithubRepo": "kubernetes-training-setup-aws",
              "Name": "skyworkz-k8s-training-m0Mr1GVr-private-eu-west-1a",
              "kubernetes.io/cluster/skyworkz-k8s-training-m0Mr1GVr": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "GithubOrg": "skyworkz",
              "GithubRepo": "kubernetes-training-setup-aws",
              "Name": "skyworkz-k8s-training-m0Mr1GVr-private-eu-west-1a",
              "kubernetes.io/cluster/skyworkz-k8s-training-m0Mr1GVr": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0c097766d8319d729"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:267074127319:subnet/subnet-057ef46bbd5a90434",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-057ef46bbd5a90434",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "267074127319",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "GithubOrg": "skyworkz",
              "GithubRepo": "kubernetes-training-setup-aws",
              "Name": "skyworkz-k8s-training-m0Mr1GVr-private-eu-west-1b",
              "kubernetes.io/cluster/skyworkz-k8s-training-m0Mr1GVr": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "GithubOrg": "skyworkz",
              "GithubRepo": "kubernetes-training-setup-aws",
              "Name": "skyworkz-k8s-training-m0Mr1GVr-private-eu-west-1b",
              "kubernetes.io/cluster/skyworkz-k8s-training-m0Mr1GVr": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0c097766d8319d729"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:267074127319:subnet/subnet-013ad20823b3a8e2d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.13.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-013ad20823b3a8e2d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "267074127319",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "GithubOrg": "skyworkz",
              "GithubRepo": "kubernetes-training-setup-aws",
              "Name": "skyworkz-k8s-training-m0Mr1GVr-private-eu-west-1c",
              "kubernetes.io/cluster/skyworkz-k8s-training-m0Mr1GVr": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "GithubOrg": "skyworkz",
              "GithubRepo": "kubernetes-training-setup-aws",
              "Name": "skyworkz-k8s-training-m0Mr1GVr-private-eu-west-1c",
              "kubernetes.io/cluster/skyworkz-k8s-training-m0Mr1GVr": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0c097766d8319d729"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:267074127319:subnet/subnet-0bde173fcb2ebc2a3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bde173fcb2ebc2a3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "267074127319",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "GithubOrg": "skyworkz",
              "GithubRepo": "kubernetes-training-setup-aws",
              "Name": "skyworkz-k8s-training-m0Mr1GVr-public-eu-west-1a",
              "kubernetes.io/cluster/skyworkz-k8s-training-m0Mr1GVr": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "GithubOrg": "skyworkz",
              "GithubRepo": "kubernetes-training-setup-aws",
              "Name": "skyworkz-k8s-training-m0Mr1GVr-public-eu-west-1a",
              "kubernetes.io/cluster/skyworkz-k8s-training-m0Mr1GVr": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0c097766d8319d729"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:267074127319:subnet/subnet-0c26f36f3ec111ebe",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c26f36f3ec111ebe",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "267074127319",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "GithubOrg": "skyworkz",
              "GithubRepo": "kubernetes-training-setup-aws",
              "Name": "skyworkz-k8s-training-m0Mr1GVr-public-eu-west-1b",
              "kubernetes.io/cluster/skyworkz-k8s-training-m0Mr1GVr": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "GithubOrg": "skyworkz",
              "GithubRepo": "kubernetes-training-setup-aws",
              "Name": "skyworkz-k8s-training-m0Mr1GVr-public-eu-west-1b",
              "kubernetes.io/cluster/skyworkz-k8s-training-m0Mr1GVr": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0c097766d8319d729"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:267074127319:subnet/subnet-0f8b8c85f53bc0798",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f8b8c85f53bc0798",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "267074127319",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "GithubOrg": "skyworkz",
              "GithubRepo": "kubernetes-training-setup-aws",
              "Name": "skyworkz-k8s-training-m0Mr1GVr-public-eu-west-1c",
              "kubernetes.io/cluster/skyworkz-k8s-training-m0Mr1GVr": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "GithubOrg": "skyworkz",
              "GithubRepo": "kubernetes-training-setup-aws",
              "Name": "skyworkz-k8s-training-m0Mr1GVr-public-eu-west-1c",
              "kubernetes.io/cluster/skyworkz-k8s-training-m0Mr1GVr": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0c097766d8319d729"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:267074127319:vpc/vpc-0c097766d8319d729",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b3a430c7c8d33620",
            "default_route_table_id": "rtb-0e7d396a0bb3ad4c7",
            "default_security_group_id": "sg-00900f8e16472e7a5",
            "dhcp_options_id": "dopt-0f91a3552ee41eee8",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0c097766d8319d729",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e7d396a0bb3ad4c7",
            "owner_id": "267074127319",
            "tags": {
              "GithubOrg": "skyworkz",
              "GithubRepo": "kubernetes-training-setup-aws",
              "Name": "skyworkz-k8s-training-m0Mr1GVr"
            },
            "tags_all": {
              "GithubOrg": "skyworkz",
              "GithubRepo": "kubernetes-training-setup-aws",
              "Name": "skyworkz-k8s-training-m0Mr1GVr"
            }
          },
          "dependencies": [
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}